cancel trading done
