# src/routes/consumerRoutes.ts
@@ -19,6 +19,7 @@ import { SeeTradesController } from "../controllers/consumer/trades/seeTradesCon
 import { GetNotificationsController } from "../controllers/consumer/notifications/getNotificationsController";
 import { DirectTicketTradeController } from "../controllers/consumer/trades/directTicketTradeController";
 import { GeneralTicketTradeController } from "../controllers/consumer/trades/generalTicketTradeController";
+import { CancelTradingController } from "../controllers/consumer/trades/cancelTradingController";
 
 const addFavController = new AddFavController();
 const removeFavController = new RemoveFavController();
@@ -35,6 +36,7 @@ const seeTradesController = new SeeTradesController();
 const getNotificationsController = new GetNotificationsController()
 const directTicketTradeController = new DirectTicketTradeController()
 const generalTicketTradeController = new GeneralTicketTradeController()
+const cancelTradingController = new CancelTradingController()
 
 //adicionar aos favoritos refeição
 consumerRouter.post("/favoriteMeals/:mealId", validateToken, validateRefreshToken, isConsumer, addFavController.handle);
@@ -52,5 +54,6 @@ consumerRouter.get("/trades/available", validateToken, validateRefreshToken, isC
 consumerRouter.get("/notifications", validateToken, validateRefreshToken, isConsumer, getNotificationsController.handle);
 consumerRouter.put("/trades/:ticketId/direct/:receiverId", validateToken, validateRefreshToken, isConsumer, directTicketTradeController.handle);
 consumerRouter.put("/trades/:ticketId/general", validateToken, validateRefreshToken, isConsumer, generalTicketTradeController.handle);
+consumerRouter.delete("/trades/:ticketId/", validateToken, validateRefreshToken, isConsumer, cancelTradingController.handle);
 
 export { consumerRouter }
